# workhub-rs

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  justfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: backlog.md  cli.md  configuration.md  deployment.md  development-tools.md  support-matrix.md
scripts/: acceptance-confluence.sh  acceptance-jira.sh  acceptance-mcp.sh  install.ps1  install.sh  smoke-confluence.sh  smoke-http.sh  smoke-jira.sh  smoke-stdio.sh
skills/workhub-rs/: SKILL.md
skills/workhub-rs/references/: confluence.md  conventions.md  gitlab.md  jira.md  runtime.md
src/: acceptance.rs  cli.rs  config.rs  context.rs  env_loader.rs  error.rs  main.rs  mcp.rs  mcp_confluence_helpers.rs  mcp_errors.rs  operations.rs  smoke.rs  tool_registry.rs
src/acceptance/tests/: mod.rs
src/atlassian/: auth.rs  compat.rs  config.rs  custom_headers.rs  error.rs  http.rs  mod.rs  mtls.rs  proxy.rs  redaction.rs  request_auth.rs  security.rs
src/cli/: config_command.rs  confluence.rs  contract.rs  gitlab.rs  jira.rs
src/confluence/: client.rs  config.rs  formatting.rs  mod.rs  models.rs  tools.rs
src/confluence/client/: analytics.rs  attachments.rs  comments.rs  labels.rs  pages.rs  users.rs
src/confluence/client/tests/: analytics.rs  attachments.rs  comments.rs  core.rs  labels.rs  mod.rs  pages.rs  search.rs  support.rs  users.rs
src/gitlab/: client.rs  config.rs  tools.rs
src/jira/: client.rs  config.rs  formatting.rs  models.rs  tools.rs
src/jira/client/: agile.rs  attachments.rs  comments.rs  development.rs  fields.rs  forms.rs  issues.rs  metrics.rs  projects.rs  search.rs  service_desk.rs  transitions.rs
src/jira/client/tests/: comments_transitions.rs  errors.rs  extensions.rs  fields.rs  issues.rs  metrics.rs  mod.rs  search.rs  support.rs
src/mcp/: confluence_handlers.rs  confluence_values.rs  gitlab_handlers.rs  jira_handlers.rs  jira_payloads.rs  schema.rs  session_auth.rs  tool_log.rs
src/mcp/tests/: confluence_handlers.rs  discovery.rs  gitlab_handlers.rs  jira_handlers.rs  mod.rs  read_only.rs  request_auth.rs  schema_logging.rs  support.rs
src/observability/: config.rs  context.rs  events.rs  mod.rs  panic.rs  redaction.rs  rotation.rs  schema.rs  sinks.rs  support_bundle.rs  usage.rs
src/operations/: confluence.rs  error.rs  gitlab.rs  jira.rs  output.rs
src/tool_registry/: confluence.rs  gitlab.rs  jira.rs
src/tool_registry/tests/: mod.rs
src/upstream/: auth.rs  config.rs  custom_headers.rs  http.rs  redaction.rs  security.rs
tests/: dotenv_logging.rs
xtask/: Cargo.toml
xtask/src/: acceptance.rs  main.rs  redaction.rs  smoke.rs
xtask/src/acceptance/tests/: mod.rs
