[package]
name = "workhub-rs"
version = "0.6.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
default-run = "workhub"

[workspace]
members = [".", "xtask"]
resolver = "3"

[profile.release]
strip = "symbols"

[[bin]]
name = "workhub"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
dotenvy = "0.15.7"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
rmcp = { version = "1.7.0", default-features = false, features = [
    "macros",
    "schemars",
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
toml = "0.9"
uuid = { version = "1.23.2", features = ["serde", "v7"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.23.0"
