[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = [
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-util = "0.7.17"
